[package]
name = "const_ops"
version = "0.1.0"
edition = "2021"
license = "GNU GPL v3"
descripiton = "const-ready version of core::ops / std::ops arithmetic traits"
repository = "https://github.com/haennes/const_ops"
homepage = "https://github.com/haennes/const_ops"
documentation = "https://docs.rs/const_ops"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
